# ether-eye-app

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  index.html  package.json  tailwind.config.ts
benches/: benchmark.rs
src/: App.tsx  cache.rs  config.rs  error.rs  index.css  lib.rs  main.rs  models.rs
src/api/: dashboard.rs  mod.rs  scanner.rs  settings.rs  trades.rs  whitelist.rs
src/components/: AppSidebar.tsx  ConfigOverlay.tsx  LiveLog.tsx  MetricsHeader.tsx  SignalMatrix.tsx
src/hooks/: useEngine.ts
src/integrations/supabase/: types.ts
src/lib/: config.ts  mock-data.ts  settings-store.ts  solana-validator.ts
src/pages/: Dashboard.tsx  Index.tsx  Scanner.tsx  Settings.tsx  TradeDetail.tsx  Whitelist.tsx
src/services/: mod.rs  scanner.rs  settings.rs  verifier.rs
src/types/: solana.ts
static/: index.html
static/css/: style.css
static/js/: app.ts
supabase/: config.toml
supabase/functions/build-whitelist/: index.ts
supabase/functions/scan-blocks/: index.ts
supabase/migrations/: 20260325004826_36d9aac7-e2c3-4846-b47b-e332717e9758.sql
tests/: integration_tests.rs
