[package]
name = "solana_bot"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls"] }
reqwest = { version = "0.11", features = ["json"] }
solana-sdk = "1.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1